[package]
name = "excel-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
anyhow = "1" # 错误处理
clap = "3.0.0-beta.5" # 命令行解析
reqwest = { version = "0.11", features = ["json"] } # http 客户端
tokio = { version = '1', features = ["full"] } # 异步处理库